NetBSD Problem Report #42983

From www@NetBSD.org  Tue Mar 16 16:49:22 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 0EB8A63B873
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 16 Mar 2010 16:49:22 +0000 (UTC)
Message-Id: <20100316164921.CCA4E63B11D@www.NetBSD.org>
Date: Tue, 16 Mar 2010 16:49:21 +0000 (UTC)
From: Christoph_Egger@gmx.de
Reply-To: Christoph_Egger@gmx.de
To: gnats-bugs@NetBSD.org
Subject: netbsd kernel has corrupted symbol table
X-Send-Pr-Version: www-1.0

>Number:         42983
>Category:       port-amd64
>Synopsis:       netbsd kernel has corrupted symbol table
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-amd64-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 16 16:50:00 +0000 2010
>Closed-Date:    Thu Mar 25 16:21:19 +0000 2010
>Last-Modified:  Thu Mar 25 16:21:19 +0000 2010
>Originator:     Christoph Egger
>Release:        -current (2010-03-14)
>Organization:
>Environment:
NetBSD/amd64
>Description:

Booting an iso built by releng from 2010-03-14 fails:

9970432+5696576+707616read symbols: Input/output error
boot: cd0a: netbsd: Input/output error

# readelf -e /mnt/netbsd                                                  
readelf: Error: Unable to read in 0x6a14 bytes of section headers
readelf: Error: Not an ELF file - it has the wrong magic bytes at the start

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@kollasch.net>
To: gnats-bugs@NetBSD.org
Cc: port-amd64-maintainer@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: port-amd64/42983: netbsd kernel has corrupted symbol table
Date: Sun, 21 Mar 2010 21:56:24 +0000

 > 9970432+5696576+707616read symbols: Input/output error
 > boot: cd0a: netbsd: Input/output error

 This is due to the "/* Check for concatenated .gz files: */"
 block of code in cread.c around line 290.

 > # readelf -e /mnt/netbsd                                                  
 > readelf: Error: Unable to read in 0x6a14 bytes of section headers

 it's a gzipped file:

 $ file -sz /mnt/netbsd                                       
 /mnt/netbsd: ELF 64-bit LSB executable, x86-64, version 1 (SYSV) (gzip compressed data, from Unix, max compression)

From: "Christoph Egger" <Christoph_Egger@gmx.de>
To: gnats-bugs@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org,
 port-amd64-maintainer@netbsd.org
Cc: 
Subject: Re: port-amd64/42983: netbsd kernel has corrupted symbol table
Date: Mon, 22 Mar 2010 17:49:03 +0100

 > The following reply was made to PR port-amd64/42983; it has been noted by
 > GNATS.
 > 
 > From: "Jonathan A. Kollasch" <jakllsch@kollasch.net>
 > To: gnats-bugs@NetBSD.org
 > Cc: port-amd64-maintainer@netbsd.org, gnats-admin@netbsd.org,
 > 	netbsd-bugs@netbsd.org
 > Subject: Re: port-amd64/42983: netbsd kernel has corrupted symbol table
 > Date: Sun, 21 Mar 2010 21:56:24 +0000
 > 
 >  > 9970432+5696576+707616read symbols: Input/output error
 >  > boot: cd0a: netbsd: Input/output error
 >  
 >  This is due to the "/* Check for concatenated .gz files: */"
 >  block of code in cread.c around line 290.

 In my source tree, this is line 388.
 What fix do you propose?

 >  > # readelf -e /mnt/netbsd                                               
 >   
 >  > readelf: Error: Unable to read in 0x6a14 bytes of section headers
 >  
 >  it's a gzipped file:
 >  
 >  $ file -sz /mnt/netbsd                                       
 >  /mnt/netbsd: ELF 64-bit LSB executable, x86-64, version 1 (SYSV) (gzip
 > compressed data, from Unix, max compression)

 confirmed.

From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42983 CVS commit: src/sys/lib/libsa
Date: Mon, 22 Mar 2010 16:57:54 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Mon Mar 22 16:57:54 UTC 2010

 Modified Files:
 	src/sys/lib/libsa: cd9660.c

 Log Message:
 Ensure cd9660_read() gives accurate EOF indication.
 Should fix PR/42983.


 To generate a diff of this commit:
 cvs rdiff -u -r1.24 -r1.25 src/sys/lib/libsa/cd9660.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christoph Egger" <Christoph_Egger@gmx.de>
To: gnats-bugs@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org,
 port-amd64-maintainer@netbsd.org
Cc: 
Subject: Re: port-amd64/42983: netbsd kernel has corrupted symbol table
Date: Wed, 24 Mar 2010 11:16:35 +0100

 I retried with an iso built by releng autobuilder from
 2010-03-22.

 Booting a kernel still fails the same way:

 9970432+5696576+707616read symbols: Input/output error
 boot: cd0a: netbsd: Input/output error

From: "Christoph Egger" <Christoph_Egger@gmx.de>
To: gnats-bugs@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org,
 port-amd64-maintainer@netbsd.org
Cc: 
Subject: Re: port-amd64/42983: netbsd kernel has corrupted symbol table
Date: Thu, 25 Mar 2010 17:12:22 +0100

 > 
 >  I retried with an iso built by releng autobuilder from
 >  2010-03-22.
 >  
 >  Booting a kernel still fails the same way:
 >  
 >  9970432+5696576+707616read symbols: Input/output error
 >  boot: cd0a: netbsd: Input/output error
 >  

 I retried with an iso built by releng autobuilder from
 2010-03-24 which contains the commit.

 NetBSD boots again.
 This PR can be considered fixed.

 Christoph

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Thu, 25 Mar 2010 16:21:19 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.