Ensure cd9660_read() gives accurate EOF indication. Should fix PR/42983.